--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
   <title>Homework</title>
@@ -45,5 +47,164 @@
       <img src="img/FullSizeRender (7).png" class="user__avatar">
     </a>
   </header>
+  <div class="container">
+    <aside class="sidebar">
+      <nav class="navigation">
+        <ul class="navigation__menu">
+          <li class="navigation__item">
+            <a href="" class="navigation_link">
+              <svg class="icon icon-Home" width="20" height="19">
+                <use xlink:href="img/icons.svg#Home"></use>
+                <span class="navigation__text">Home</span>
+              </svg>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation_link">
+              <svg class="icon icon-Trending" width="20" height="19">
+                <use xlink:href="img/icons.svg#Trending"></use>
+                <span class="navigation__text">Trending</span>
+              </svg>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation_link">
+              <svg class="icon icon-Subscriptions" width="20" height="19">
+                <use xlink:href="img/icons.svg#Subscriptions"></use>
+                <span class="navigation__text">Subscriptions</span>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <ul class="navigation__menu">
+          <li class="navigation__item">
+            <a href="" class="navigation_link">
+              <svg class="icon icon-Library" width="20" height="19">
+                <use xlink:href="img/icons.svg#Library"></use>
+                <span class="navigation__text">Library</span>
+              </svg>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation_link">
+              <svg class="icon icon-History" width="20" height="19">
+                <use xlink:href="img/icons.svg#History"></use>
+                <span class="navigation__text">History</span>
+              </svg>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation_link">
+              <svg class="icon icon-Watch" width="20" height="19">
+                <use xlink:href="img/icons.svg#Watch"></use>
+                <span class="navigation__text">Watch later</span>
+              </svg>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation_link">
+              <svg class="icon icon-Favourites" width="20" height="19">
+                <use xlink:href="img/icons.svg#Favourites"></use>
+                <span class="navigation__text">Favourites</span>
+              </svg>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation_link">
+              <svg class="icon icon-Liked" width="20" height="19">
+                <use xlink:href="img/icons.svg#Liked"></use>
+                <span class="navigation__text">Liked videos</span>
+              </svg>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation_link">
+              <svg class="icon icon-Music" width="20" height="19">
+                <use xlink:href="img/icons.svg#Music"></use>
+                <span class="navigation__text">Music</span>
+              </svg>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation_link">
+              <svg class="icon icon-Games" width="20" height="19">
+                <use xlink:href="img/icons.svg#Games"></use>
+                <span class="navigation__text">Games</span>
+              </svg>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation_link">
+              <svg class="icon icon-Show" width="20" height="19">
+                <use xlink:href="img/icons.svg#Show"></use>
+                <span class="navigation__text">Show more </span>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+        <h2 class="navigation__title">Subscriptions</h2>
+        <ul class="navigation__menu">
+          <li class="navigation__item">
+            <a href="#" class="navigation_link">
+              <img src="img/Gussie.png" alt="Gussie Singleton" class="navigation_image">
+              <span class="navigation__text">
+                Gussie Singleton
+              </span>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation_link">
+              <img src="img/Nora.png" alt="Nora Francis" class="navigation_image">
+              <span class="navigation__text">
+                Nora Francis
+              </span>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation_link">
+              <img src="img/Belle.png" alt="Belle Briggs" class="navigation_image">
+              <span class="navigation__text">
+                Belle Briggs
+              </span>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation_link">
+              <img src="img/Enice.png" alt="Eunice Cortez" class="navigation_image">
+              <span class="navigation__text">
+                Eunice Cortez
+              </span>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation_link">
+              <img src="img/Emma.png" alt="Emma Hanson" class="navigation_image">
+              <span class="navigation__text">
+                Emma Hanson
+              </span>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation_link">
+              <img src="img/Leah.png" alt="Leah Berry" class="navigation_image">
+              <span class="navigation__text">
+                Leah Berry
+              </span>
+            </a>
+          </li>
+        </ul>
+        <ul class="navigation__menu">
+          <li class="navigation__item">
+            <a href="" class="navigation_link">
+              <svg class="icon icon-Setting" width="20" height="19">
+                <use xlink:href="img/icons.svg#Setting"></use>
+                <span class="navigation__text">Setting</span>
+              </svg>
+            </a>
+          </li>
+        </ul>
+    </aside>
+  </div>
 </body>
 </html>
